--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="assets/socket.io.min.js"></script>
 <script>
-  var socket = io();
+  var socket = io("ws://localhost:3000");
 </script>
 </head>
 <body>
