--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,9 +20,8 @@
   // var socket = io("ws://localhost:3000");
 
   let wsUrl = (location.hostname === 'localhost') ? `localhost:3000` : `${location.hostname}:${location.port ? location.port : ''}`;
-  console.log('wsUrl',wsUrl);
   var socket = io(`ws://${wsUrl}`);
-  var carSocket=io(`ws://${wsUrl}/car`);
+  //var carSocket=io(`ws://${wsUrl}/car`);
 </script>
 </head>
 <body>
