--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,7 +20,7 @@
   // var socket = io("ws://localhost:3000");
 
   let wsUrl = (location.hostname === 'localhost') ? `localhost:3000` : `${location.hostname}:${location.port ? location.port : ''}`;
-  var socket = io(`ws://${wsUrl}`);
+  var socket = io(`wss://${wsUrl}`);
   //var carSocket=io(`ws://${wsUrl}/car`);
 </script>
 </head>
